created and styled header component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
   "cSpell.ignoreWords": [
     "larr",
+    "my",
+    "my thoughtz",
     "rarr",
-    "sumpin"
+    "sumpin",
+    "thoughtz"
   ]
 }
