--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "@mdx-js/mdx": "^1.6.18",
+    "@mdx-js/react": "^1.6.18",
     "gatsby": "^2.24.67",
     "gatsby-plugin-emotion": "^4.3.13",
+    "gatsby-plugin-mdx": "^1.2.46",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
