--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
     "gatsby": "^2.24.67",
+    "gatsby-background-image": "^1.1.2",
+    "gatsby-image": "^2.4.21",
     "gatsby-plugin-emotion": "^4.3.13",
     "gatsby-plugin-mdx": "^1.2.46",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-images": "^3.3.33",
+    "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-transformer-sharp": "^2.5.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
